--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Volunteer Form</title>
+	<link rel="stylesheet" href="css/reset.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 <h1><strong>Volunteer Form</strong></h1>
