--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Volunteer Form</title>
+	<title>Birthday Signup Form</title>
 	<link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-<h1><strong>Volunteer Form</strong></h1>
+<h1><strong>Birthday Signup</strong></h1>
 <form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
   <fieldset>
     <legend><strong>My Info:</strong></legend>
@@ -43,37 +43,7 @@
        <option value="over 65">Over 65</option>
 	 </select>
   </fieldset>
-  <fieldset>
-    <legend><strong>My Availability:</strong></legend>
-	<div>
-	<input type="checkbox" name="available_field[]" value="Sunday">Sunday
-	</div>
-	<div>
-	<input type="checkbox" name="available_field[]" value="Monday">Monday
-	</div>
-	<div>
-	<input type="checkbox" name="available_field[]" value="Tuesday">Tuesday
-	</div>
-	<div>
-	<input type="checkbox" name="available_field[]" value="Wednesday">Wednesday
-	</div>
-	<div>
-	<input type="checkbox" name="available_field[]" value="Thursday">Thursday
-	</div>
-	<div>
-	<input type="checkbox" name="available_field[]" value="Friday">Friday
-	</div>
-	<div>
-	<input type="checkbox" name="available_field[]" value="Saturday">Saturday
-	</div>
-	<p><strong>Comments</strong></p>
-	<div>
-	<textarea name="comments_field" cols="100" rows="6">Enter your comments...</textarea>
-	</div>
-	<input type="hidden" name="hidden_field" value="bkamran">
-	<p><strong>Please hit submit once you are done</strong></p>
-	<input type="submit" value="Submit">
-	</fieldset>
+ 
 </form>
 </body>
 </html>
