--- a/index.html
+++ b/index.html
@@ -22,26 +22,12 @@
 	 </div>
 	 <div>
 	 Phone Number:
-	 <input type="text" name="phone_field">
+	 <input type="tel" name="phone_field">
 	 </div>
 	 <div>
 	 Email Address:
 	 <input type="email" name="email_field">
 	 </div>
-	 <div>
-	 <label>Gender</label>
-	 <input type="radio" name="gender_field" value="male" checked> Male
-	 <input type="radio" name="gender_field" value="female"> Female
-	 </div>
-	 <select name="age_field">
-	   <option value="under 18">Under 18</option>
-	   <option value="18-24">18-24</option>
-       <option value="25-34">25-34</option>
-       <option value="35-44">35-44</option>
-       <option value="45-54">45-54</option>
-       <option value="55-64">55-64</option>
-       <option value="over 65">Over 65</option>
-	 </select>
   </fieldset>
  
 </form>
