--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <h1><strong>Birthday Signup</strong></h1>
 <form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
   <fieldset>
-    <legend><strong>My Info:</strong></legend>
+    <legend><strong>Sign Up:</strong></legend>
 	<div>
-     First Name:
-	 <input type="text" name="first_name_field">
+     Date Of Birth:
+	 <input type="date" name="DOB_field">
 	 </div>
 	 <div>
 	 Last Name:
