--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-<h1><strong>Birthday Signup</strong></h1>
+<h1><strong>Sign Up</strong></h1>
 <form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
   <fieldset>
-    <legend><strong>Sign Up:</strong></legend>
 	<div>
      Date Of Birth:
 	 <input type="date" name="DOB_field">
@@ -29,7 +28,6 @@
 	 <input type="email" name="email_field">
 	 </div>
   </fieldset>
- 
 </form>
 </body>
 </html>
