added updates to css and index
added more updates

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <h1><strong>Sign Up</strong></h1>
+<p>Please enter your information below. </p>
 <form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
   <fieldset>
 	<div>
