--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
+<div class="header">
 <h1><strong>Sign Up</strong></h1>
+</div>
 <p>Please enter your information below. </p>
 <form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
   <fieldset>
 	<div>
-     Date Of Birth:
+     <label>Date Of Birth:</label>
 	 <input type="date" name="DOB_field">
 	 </div>
 	 <div>
