added background and other enhancements

--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-<div class="header">
+<div class="container">
 <h1><strong>Sign Up</strong></h1>
-</div>
-<p>Please enter your information below. </p>
+<p>Please enter your information below.</p>
 <form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
   <fieldset>
 	<div>
-     <label>Date Of Birth:</label>
-	 <input type="date" name="DOB_field">
+     <label>Email Address:</label>
+	 <input type="email" name="email_field">
 	 </div>
 	 <div>
 	 Last Name:
@@ -27,10 +26,10 @@
 	 <input type="tel" name="phone_field">
 	 </div>
 	 <div>
-	 Email Address:
-	 <input type="email" name="email_field">
+	 
 	 </div>
   </fieldset>
 </form>
+</div>
 </body>
 </html>
