added more labels and better css

--- a/index.html
+++ b/index.html
@@ -12,23 +12,24 @@
 <h1><strong>Sign Up</strong></h1>
 <p>Please enter your information below.</p>
 <form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
-  <fieldset>
+  
 	<div>
      <label>Email Address:</label>
+	</div>
+	<div>
 	 <input type="email" name="email_field">
 	 </div>
-	 <div>
-	 Last Name:
-	 <input type="text" name="last_name_field">
+	<div>
+	 <label>Date of Birth: </label>
+	 <input type="date" name="dob_field">
 	 </div>
 	 <div>
-	 Phone Number:
+	 </label>Phone Number:</label>
 	 <input type="tel" name="phone_field">
-	 </div>
-	 <div>
+	</div>
 	 
-	 </div>
-  </fieldset>
+	 
+ 
 </form>
 </div>
 </body>
