added more fixes and made more aesthtic spacing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container">
-<h1><strong>Sign Up</strong></h1>
+<h1>Sign Up Form</h1>
 <p>Please enter your information below.</p>
 <form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
   
@@ -17,14 +17,14 @@
      <label>Email Address:</label>
 	</div>
 	<div>
-	 <input type="email" name="email_field">
+	 <input type="email" placeholder="example@example.com" name="email_field">
 	 </div>
 	<div>
 	 <label>Date of Birth: </label>
 	 <input type="date" name="dob_field">
 	 </div>
 	 <div>
-	 </label>Phone Number:</label>
+	 <label>Phone Number:</label>
 	 <input type="tel" name="phone_field">
 	</div>
 	 
