added new class for submit button and better background color

--- a/index.html
+++ b/index.html
@@ -11,25 +11,22 @@
 <div class="container">
 <h1>Sign Up Form</h1>
 <p>Please enter your information below.</p>
-<form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
-  
+<form method="post">
 	<div>
      <label>Email Address:</label>
 	</div>
 	<div>
-	 <input type="email" placeholder="example@example.com" name="email_field">
+	 <input type="email" placeholder="example@example.com" name="email_field"/>
 	 </div>
 	<div>
 	 <label>Date of Birth: </label>
-	 <input type="date" name="dob_field">
+	 <input type="date" name="dob_field"/>
 	 </div>
 	 <div>
 	 <label>Phone Number:</label>
-	 <input type="tel" name="phone_field">
-	</div>
-	 
-	 
- 
+	 <input type="tel" name="phone_field"/>
+	</div> 
+	<input class="submit" type="submit" name="submit_field" value="Submit"/>
 </form>
 </div>
 </body>
