--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Birthday Signup Form</title>
+	<title>Signup Form</title>
 	<link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="css/style.css"/>
 </head>
@@ -24,7 +24,7 @@
 	 </div>
 	 <div>
 	 <label>Phone Number:</label>
-	 <input type="tel" name="phone_field"/>
+	 <input type="tel" placeholder="xxx-xxx-xxxx" name="phone_field"/>
 	</div> 
 	<input class="submit" type="submit" name="submit_field" value="Submit"/>
 </form>
