added some space fillers

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 	 <div>
 	 <label>Phone Number:</label>
 	 <input type="tel" placeholder="xxx-xxx-xxxx" name="phone_field"/>
-	</div> 
+	</div>
+	<div>
+	<label class="checkbox">
+		<input class="checkbox" type="checkbox" checked="checked">I agree to the terms and conditions
+	</label>
+	</div>
 	<input class="submit" type="submit" name="submit_field" value="Submit"/>
 </form>
 </div>
