--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
 <h1>Sign Up Form</h1>
 <p>Please enter your information below.</p>
-<form method="post">
+<form>
 	<div>
      <label>Email Address:</label>
 	</div>
