--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 <p>Please enter your information below.</p>
 <form>
 	<div>
-     <label>Email Address:</label>
+	<label>First Name</label>
+	<input type="text" placeholder="Please enter your first name" name="name_field"/>
 	</div>
 	<div>
+     <label>Email Address:</label>
 	 <input type="email" placeholder="example@example.com" name="email_field"/>
 	 </div>
 	<div>
