--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <form>
 	<div>
 	<label>First Name</label>
-	<input type="text" placeholder="Please enter your first name" name="name_field"/>
+	<input type="text" placeholder="Please enter your first name" name="fname_field"/>
+	</div>
+	<div>
+	<label>Last Name</label>
+	<input type="text" placeholder="Please enter your last name" name="lname_field"/>
 	</div>
 	<div>
      <label>Email Address:</label>
