--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 <form>
 	<div>
 	<label>First Name</label>
-	<input type="text" placeholder="Please enter your first name" name="fname_field"/>
-	</div>
-	<div>
-	<label>Last Name</label>
-	<input type="text" placeholder="Please enter your last name" name="lname_field"/>
+	<label class="float">Last Name</label>
+	<input class="name" type="text" placeholder="Please enter your first name" name="fname_field"/>
+	<input class="name float" type="text" placeholder="Please enter your last name" name="lname_field"/>
 	</div>
 	<div>
      <label>Email Address:</label>
