corrected float properties
added better floats for more aesthtetic experience

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 <h1>Sign Up Form</h1>
 <p>Please enter your information below.</p>
 <form>
-	<div>
+	<div class="container_float">
 	<label>First Name</label>
-	<label class="float">Last Name</label>
-	<input class="name" type="text" placeholder="Please enter your first name" name="fname_field"/>
-	<input class="name float" type="text" placeholder="Please enter your last name" name="lname_field"/>
+	<input type="text" placeholder="Please enter your first name" name="fname_field"/>
+	</div>
+	<div class="container1">
+	<label>Last Name</label>
+	<input type="text" placeholder="Please enter your last name" name="lname_field"/>
 	</div>
 	<div>
      <label>Email Address:</label>
