added last float property
made floats perfect

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <p>Please enter your information below.</p>
 <form>
 	<div class="container_float">
-	<label>First Name</label>
-	<input type="text" placeholder="Please enter your first name" name="fname_field"/>
+	<label class="float">Last Name</label>
+	<input class="float" type="text" placeholder="Please enter your last name" name="lname_field"/>
 	</div>
 	<div class="container1">
-	<label>Last Name</label>
-	<input type="text" placeholder="Please enter your last name" name="lname_field"/>
+	<label>First Name</label>
+	<input type="text" placeholder="Please enter your first name" name="fname_field"/>
 	</div>
 	<div>
      <label>Email Address:</label>
