--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
 	<input type="text" placeholder="Please enter your first name" name="fname_field"/>
 	</div>
 	<div>
+	<label>Username</label>
+	<input type="text" placeholder="New Username" name="username_field"/>
+	</div>
+	<div class="container_float">
+	<label class="float">Retype Password</label>
+	<input class="float" type="text" placeholder="Please reenter your password" name="passwd_field"/>
+	</div>
+	<div class="container1">
+	<label>Password</label>
+	<input type="text" placeholder="Please enter a new password" name="passwd_field"/>
+	</div>
+	<div>
      <label>Email Address:</label>
 	 <input type="email" placeholder="example@example.com" name="email_field"/>
 	 </div>
