--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 	</div>
 	<div class="container_float">
 	<label class="float">Retype Password</label>
-	<input class="float" type="text" placeholder="Please reenter your password" name="passwd_field"/>
+	<input class="float" type="password" placeholder="Please reenter your password" name="passwd_field"/>
 	</div>
 	<div class="container1">
 	<label>Password</label>
-	<input type="text" placeholder="Please enter a new password" name="passwd_field"/>
+	<input type="password" placeholder="Please enter a new password" name="passwd_field"/>
 	</div>
 	<div>
      <label>Email Address:</label>
