--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Signup Form</title>
 	<link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="css/media-style.css"/>
 </head>
 <body>
 <div class="container">
