added better float barometers

--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
 <h1>Sign Up Form</h1>
 <p>Please enter your information below.</p>
 <form>
-	<div class="container_float">
-	<label class="float">Last Name</label>
-	<input class="float" type="text" placeholder="Please enter your last name" name="lname_field"/>
-	</div>
-	<div class="container1">
+	<div class="container_float1">
 	<label>First Name</label>
-	<input type="text" placeholder="Please enter your first name" name="fname_field"/>
+	<input  type="text" placeholder="Please enter your first name" name="fname_field"/>
+	</div>
+	<div class="container_float">
+	<label class="float" >Last Name</label>
+	<input class="float" type="text" placeholder="Please enter your last name" name="lname_field"/>
 	</div>
 	<div>
 	<label>Username</label>
 	<input type="text" placeholder="New Username" name="username_field"/>
 	</div>
-	<div class="container_float">
-	<label class="float">Retype Password</label>
-	<input class="float" type="password" placeholder="Please reenter your password" name="passwd_field"/>
-	</div>
-	<div class="container1">
+	<div class="container_float1">
 	<label>Password</label>
 	<input type="password" placeholder="Please enter a new password" name="passwd_field"/>
+	</div>
+	<div class="container_float">
+	<label class="float">Re-enter Password</label>
+	<input class="float" type="password" placeholder="Please re-enter your password" name="passwd_field"/>
 	</div>
 	<div>
      <label>Email Address:</label>
